--- a/server/plugins/SimpleHomes/Homes.yml
+++ b/server/plugins/SimpleHomes/Homes.yml
@@ -1,1 +1,44 @@
-
+Prisoner_1543:
+  base:
+    world: world
+    X: 211.5909338766134
+    Y: 66.0
+    Z: 292.49436449600233
+  trees:
+    world: world
+    X: 135.81104953141434
+    Y: 63.0
+    Z: 723.3981927180265
+  home:
+    world: world
+    X: -117.91977530042155
+    Y: 106.0
+    Z: 329.73389070605253
+  mine:
+    world: world
+    X: -145.99764257682756
+    Y: 89.0
+    Z: 341.69999998807907
+  diamonds:
+    world: world
+    X: -97.7414893170438
+    Y: 11.0
+    Z: 336.5020936249336
+Glen_1543:
+  base:
+    world: world
+    X: 213.1531994475424
+    Y: 66.0
+    Z: 291.6310129213739
+CADENshiddy:
+  base:
+    world: world
+    X: 213.20527346856397
+    Y: 66.0
+    Z: 291.65308974554955
+jaydog:
+  home:
+    world: world
+    X: -119.07886360201391
+    Y: 106.0
+    Z: 330.26089727112117
