--- a/server/server.properties
+++ b/server/server.properties
@@ -1,6 +1,6 @@
 #Minecraft server properties
 #Mon Feb 26 17:05:23 UTC 2024
-allow-flight=false
+allow-flight=true
 allow-nether=true
 announce-player-achievements=true
 broadcast-console-to-ops=true
