--- a/server/server.properties
+++ b/server/server.properties
@@ -19,8 +19,8 @@ level-seed=
 level-type=DEFAULT
 max-build-height=256
 max-players=20
-max-world-size=29999984
-motd=A Minecraft Server
+max-world-size=100
+motd=Z CRAFT LIMITED
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
