--- a/server/server.properties
+++ b/server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Feb 26 17:05:23 UTC 2024
+#Fri Mar 22 16:36:02 UTC 2024
 allow-flight=true
 allow-nether=true
 announce-player-achievements=true
@@ -22,7 +22,7 @@ max-players=20
 max-world-size=100
 motd=Z CRAFT LIMITED
 network-compression-threshold=256
-online-mode=true
+online-mode=false
 op-permission-level=4
 player-idle-timeout=0
 pvp=true
