--- a/server/server.properties
+++ b/server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Mar 22 16:36:02 UTC 2024
+#Fri Mar 22 16:44:29 UTC 2024
 allow-flight=true
 allow-nether=true
 announce-player-achievements=true
@@ -14,8 +14,8 @@ gamemode=0
 generate-structures=true
 generator-settings=
 hardcore=false
-level-name=world
-level-seed=
+level-name=Z CRAFT
+level-seed=1234567876543456
 level-type=DEFAULT
 max-build-height=256
 max-players=20
