--- a/server/server.properties
+++ b/server/server.properties
@@ -22,7 +22,7 @@ max-players=20
 max-world-size=100
 motd=Z CRAFT LIMITED
 network-compression-threshold=256
-online-mode=false
+online-mode=true
 op-permission-level=4
 player-idle-timeout=0
 pvp=true
